change images of 20240628

--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@ window.Quarto = {
 <h2 data-anchor-id="news">News</h2>
 <div id="listing-listofnews" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-date-sort="1719500400000" data-listing-file-modified-sort="1719937680392" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="34">
+<div class="g-col-1" data-index="0" data-listing-date-sort="1719500400000" data-listing-file-modified-sort="1720590634482" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="34">
 <a href="./posts/20240628.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
-<img src="./posts/images/20240628_2.jpg" class="thumbnail-image card-img" style="height: 150px;">
+<img src="./posts/images/20240628_2.webp" class="thumbnail-image card-img" style="height: 150px;">
 </p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
@@ -241,7 +241,7 @@ Jun 28, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-date-sort="1716562800000" data-listing-file-modified-sort="1719904822401" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
+<div class="g-col-1" data-index="1" data-listing-date-sort="1716562800000" data-listing-file-modified-sort="1720590254021" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
 <a href="./posts/20240525.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -266,7 +266,7 @@ May 25, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-date-sort="1716476400000" data-listing-file-modified-sort="1719904822401" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="18">
+<div class="g-col-1" data-index="2" data-listing-date-sort="1716476400000" data-listing-file-modified-sort="1720590254020" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="18">
 <a href="./posts/20240524.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240524_1.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -289,7 +289,7 @@ May 24, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="3" data-listing-date-sort="1715698800000" data-listing-file-modified-sort="1719904822394" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="21">
+<div class="g-col-1" data-index="3" data-listing-date-sort="1715698800000" data-listing-file-modified-sort="1720590254020" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="21">
 <a href="./posts/20240515.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -312,7 +312,7 @@ May 15, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="4" data-listing-date-sort="1711033200000" data-listing-file-modified-sort="1719904822394" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
+<div class="g-col-1" data-index="4" data-listing-date-sort="1711033200000" data-listing-file-modified-sort="1720590254020" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
 <a href="./posts/20240322.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240322.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -335,7 +335,7 @@ Mar 22, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="5" data-listing-date-sort="1710687600000" data-listing-file-modified-sort="1719904822394" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="14">
+<div class="g-col-1" data-index="5" data-listing-date-sort="1710687600000" data-listing-file-modified-sort="1720590254019" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="14">
 <a href="./posts/20240318.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -360,7 +360,7 @@ Mar 18, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="6" data-listing-date-sort="1703084400000" data-listing-file-modified-sort="1719904822394" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
+<div class="g-col-1" data-index="6" data-listing-date-sort="1703084400000" data-listing-file-modified-sort="1720590254019" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
 <a href="./posts/20231221.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20231221.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
