--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ No matching items
 <section id="faculty" class="level3">
 <h3 data-anchor-id="faculty">Faculty</h3>
 <ul>
-<li>Associate Professor　1名</li>
+<li>Associate Professor　<a href="https://okanokn.github.io/">Kunihisa Okano</a></li>
 </ul>
 </section>
 <section id="graduate-students" class="level3">
