--- a/index.html
+++ b/index.html
@@ -217,16 +217,16 @@ window.Quarto = {
 <h2 data-anchor-id="news">News</h2>
 <div id="listing-listofnews" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-date-sort="1731682800000" data-listing-file-modified-sort="1731754554059" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="0" data-listing-date-sort="1731682800000" data-listing-file-modified-sort="1732190156252" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="5">
 <a href="./posts/20241116.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="posts\images\20241116.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
 学部中間発表お疲れさまでした
 </h5>
 <div class="card-text listing-description">
-学部中間発表お疲れさまでした。卒論発表まで意外と時間がないので、あまり気を抜かずに頑張りましょう。（以下は、中間発表お疲れ様会の様子です。）
+学部中間発表お疲れさまでした。卒論発表まで意外と時間がないので、あまり気を抜かずに頑張りましょう。 <!-- （以下は、中間発表お疲れ様会の様子です。） -->
 </div>
 <div class="card-attribution card-text-small justify">
 <div class="listing-author">
