--- a/index.html
+++ b/index.html
@@ -217,7 +217,57 @@ window.Quarto = {
 <h2 data-anchor-id="news">News</h2>
 <div id="listing-listofnews" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-date-sort="1731682800000" data-listing-file-modified-sort="1732190156252" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="5">
+<div class="g-col-1" data-index="0" data-listing-date-sort="1734361200000" data-listing-file-modified-sort="1734695381211" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="34">
+<a href="./posts/20241217.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top">
+<img loading="lazy" src="./posts/images/20241217.jpg" class="thumbnail-image card-img" style="height: 150px;">
+</p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+🕺CDC2024にて西田が発表しました
+</h5>
+<div class="card-text listing-description">
+Allianz MiCo, Milan Convention Centre (イタリア，ミラノ)で行われた，2024 Conference on Decision and Controlにて，M2の西田が研究発表を行いました．
+</div>
+<div class="card-attribution card-text-small justify">
+<div class="listing-author">
+
+</div>
+<div class="listing-date">
+Dec 17, 2024
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="1" data-listing-date-sort="1733410800000" data-listing-file-modified-sort="1734696170204" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<a href="./posts/20241206.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top">
+<img loading="lazy" src="./posts/images/20241217_1.jpg" class="thumbnail-image card-img" style="height: 150px;">
+</p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+M1ポスター発表お疲れさまでした
+</h5>
+<div class="card-text listing-description">
+M1ポスター発表お疲れさまでした．また、質疑応答のメモを取ってくださったB4の方々，ありがとうございました． 学生や先生との質疑応答を通して，沢山のアドバイスをいた抱いたと思うので，それらを今後の研究につなげていきましょう． （以下は，ポスター発表の様子です．）
+</div>
+<div class="card-attribution card-text-small justify">
+<div class="listing-author">
+
+</div>
+<div class="listing-date">
+Dec 6, 2024
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="2" data-listing-date-sort="1731682800000" data-listing-file-modified-sort="1732190156252" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="5">
 <a href="./posts/20241116.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -240,7 +290,7 @@ Nov 16, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-date-sort="1728399600000" data-listing-file-modified-sort="1731753316958" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="13">
+<div class="g-col-1" data-index="3" data-listing-date-sort="1728399600000" data-listing-file-modified-sort="1731753316958" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="13">
 <a href="./posts/20241009.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20241009.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -263,7 +313,7 @@ Oct 9, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-date-sort="1721314800000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="16">
+<div class="g-col-1" data-index="4" data-listing-date-sort="1721314800000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="16">
 <a href="./posts/20240719.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240719.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -286,7 +336,7 @@ Jul 19, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="3" data-listing-date-sort="1719500400000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="34">
+<div class="g-col-1" data-index="5" data-listing-date-sort="1719500400000" data-listing-file-modified-sort="1734695453730" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="33">
 <a href="./posts/20240628.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -297,7 +347,7 @@ Jul 19, 2024
 🕺ECC24にて西田が発表しました
 </h5>
 <div class="card-text listing-description">
-KTH Royal Institute of Technology (スウェーデン，ストックホルム)で行われた， 22nd European Control Conferenceにて，M2の西田が研究発表を行いました．
+KTH Royal Institute of Technology (スウェーデン，ストックホルム)で行われた，22nd European Control Conferenceにて，M2の西田が研究発表を行いました．
 </div>
 <div class="card-attribution card-text-small justify">
 <div class="listing-author">
@@ -311,7 +361,7 @@ Jun 28, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="4" data-listing-date-sort="1716562800000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
+<div class="g-col-1" data-index="6" data-listing-date-sort="1716562800000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
 <a href="./posts/20240525.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -336,7 +386,7 @@ May 25, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="5" data-listing-date-sort="1716476400000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="18">
+<div class="g-col-1" data-index="7" data-listing-date-sort="1716476400000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="18">
 <a href="./posts/20240524.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240524_1.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -359,7 +409,7 @@ May 24, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="6" data-listing-date-sort="1715698800000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
+<div class="g-col-1" data-index="8" data-listing-date-sort="1715698800000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
 <a href="./posts/20240515.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -382,7 +432,7 @@ May 15, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="7" data-listing-date-sort="1711033200000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
+<div class="g-col-1" data-index="9" data-listing-date-sort="1711033200000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
 <a href="./posts/20240322.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240322.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -405,7 +455,7 @@ Mar 22, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="8" data-listing-date-sort="1710687600000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="14">
+<div class="g-col-1" data-index="10" data-listing-date-sort="1710687600000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="14">
 <a href="./posts/20240318.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -430,7 +480,7 @@ Mar 18, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="9" data-listing-date-sort="1703084400000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
+<div class="g-col-1" data-index="11" data-listing-date-sort="1703084400000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
 <a href="./posts/20231221.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20231221.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
