--- a/index.html
+++ b/index.html
@@ -217,7 +217,30 @@ window.Quarto = {
 <h2 data-anchor-id="news">News</h2>
 <div id="listing-listofnews" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-date-sort="1734361200000" data-listing-file-modified-sort="1734696684988" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="34">
+<div class="g-col-1" data-index="0" data-listing-date-sort="1738162800000" data-listing-file-modified-sort="1738228233740" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="4">
+<a href="./posts/20250130.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="posts\images\20250130.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+卒論発表お疲れさまでした
+</h5>
+<div class="card-text listing-description">
+卒論発表お疲れさまでした。今日の質疑応答等踏まえて、卒論のまとめを頑張ってください。また、後輩に向けて、使用したプログラムの整理をお願いします。院に進学する方は、引き続き研究を頑張りましょう。
+</div>
+<div class="card-attribution card-text-small justify">
+<div class="listing-author">
+
+</div>
+<div class="listing-date">
+Jan 30, 2025
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="1" data-listing-date-sort="1734361200000" data-listing-file-modified-sort="1738226879765" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="34">
 <a href="./posts/20241217.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -242,7 +265,7 @@ Dec 17, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-date-sort="1733410800000" data-listing-file-modified-sort="1734696683779" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="2" data-listing-date-sort="1733410800000" data-listing-file-modified-sort="1738226879765" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./posts/20241206.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -267,7 +290,7 @@ Dec 6, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-date-sort="1731682800000" data-listing-file-modified-sort="1732190156252" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="5">
+<div class="g-col-1" data-index="3" data-listing-date-sort="1731682800000" data-listing-file-modified-sort="1738226879765" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="5">
 <a href="./posts/20241116.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -290,7 +313,7 @@ Nov 16, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="3" data-listing-date-sort="1728399600000" data-listing-file-modified-sort="1731753316958" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="13">
+<div class="g-col-1" data-index="4" data-listing-date-sort="1728399600000" data-listing-file-modified-sort="1738226879764" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="13">
 <a href="./posts/20241009.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20241009.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -313,7 +336,7 @@ Oct 9, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="4" data-listing-date-sort="1721314800000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="16">
+<div class="g-col-1" data-index="5" data-listing-date-sort="1721314800000" data-listing-file-modified-sort="1738226879764" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="16">
 <a href="./posts/20240719.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240719.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -336,7 +359,7 @@ Jul 19, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="5" data-listing-date-sort="1719500400000" data-listing-file-modified-sort="1734695453730" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="33">
+<div class="g-col-1" data-index="6" data-listing-date-sort="1719500400000" data-listing-file-modified-sort="1738226879764" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="33">
 <a href="./posts/20240628.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -361,7 +384,7 @@ Jun 28, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="6" data-listing-date-sort="1716562800000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
+<div class="g-col-1" data-index="7" data-listing-date-sort="1716562800000" data-listing-file-modified-sort="1738226879763" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
 <a href="./posts/20240525.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -386,7 +409,7 @@ May 25, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="7" data-listing-date-sort="1716476400000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="18">
+<div class="g-col-1" data-index="8" data-listing-date-sort="1716476400000" data-listing-file-modified-sort="1738226879763" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="18">
 <a href="./posts/20240524.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240524_1.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -409,7 +432,7 @@ May 24, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="8" data-listing-date-sort="1715698800000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
+<div class="g-col-1" data-index="9" data-listing-date-sort="1715698800000" data-listing-file-modified-sort="1738226879762" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
 <a href="./posts/20240515.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -432,7 +455,7 @@ May 15, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="9" data-listing-date-sort="1711033200000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
+<div class="g-col-1" data-index="10" data-listing-date-sort="1711033200000" data-listing-file-modified-sort="1738226879762" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
 <a href="./posts/20240322.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240322.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -455,7 +478,7 @@ Mar 22, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="10" data-listing-date-sort="1710687600000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="14">
+<div class="g-col-1" data-index="11" data-listing-date-sort="1710687600000" data-listing-file-modified-sort="1738226879762" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="14">
 <a href="./posts/20240318.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -480,7 +503,7 @@ Mar 18, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="11" data-listing-date-sort="1703084400000" data-listing-file-modified-sort="1731753316953" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
+<div class="g-col-1" data-index="12" data-listing-date-sort="1703084400000" data-listing-file-modified-sort="1738226879761" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
 <a href="./posts/20231221.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20231221.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
