--- a/index.html
+++ b/index.html
@@ -526,7 +526,32 @@ Mar 18, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="13" data-listing-date-sort="1703084400000" data-listing-file-modified-sort="1739847752926" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
+<div class="g-col-1" data-index="13" data-listing-date-sort="1709478000000" data-listing-file-modified-sort="1742532233359" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="30">
+<a href="./posts/20250304.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top">
+<img loading="lazy" src="./posts/images/20250304.jpg" class="thumbnail-image card-img" style="height: 150px;">
+</p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+🎉 SICE International Young Authors Awardを受賞しました
+</h5>
+<div class="card-text listing-description">
+CDC2024 において発表された，下記の論文がSICE International Young Authors Award に選ばれました．西田さん，おめでとうございます．
+</div>
+<div class="card-attribution card-text-small justify">
+<div class="listing-author">
+
+</div>
+<div class="listing-date">
+Mar 4, 2024
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="14" data-listing-date-sort="1703084400000" data-listing-file-modified-sort="1739847752926" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
 <a href="./posts/20231221.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20231221.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
