--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ window.Quarto = {
 <h2 data-anchor-id="news">News</h2>
 <div id="listing-listofnews" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-date-sort="1739804400000" data-listing-file-modified-sort="1739858732849" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
+<div class="g-col-1" data-index="0" data-listing-date-sort="1739804400000" data-listing-file-modified-sort="1742533210136" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
 <a href="./posts/20250218.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20250218.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -526,12 +526,10 @@ Mar 18, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="13" data-listing-date-sort="1709478000000" data-listing-file-modified-sort="1742532233359" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="30">
+<div class="g-col-1" data-index="13" data-listing-date-sort="1709478000000" data-listing-file-modified-sort="1742533269860" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="30">
 <a href="./posts/20250304.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top">
-<img loading="lazy" src="./posts/images/20250304.jpg" class="thumbnail-image card-img" style="height: 150px;">
-</p>
+<p class="card-img-top"><img src="posts\images\20250304.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
 🎉 SICE International Young Authors Awardを受賞しました
